[package]
name = "context-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "82add180a7a72e4c832bb907215f473163255789"}

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent"]
version = "0.3.55"