[package]
name = "context-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { path = "sycamore/packages/sycamore" }
log = "0.4.14"
console_log = "0.2.0"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Window"]
version = "0.3.55"